[package]
name = "strason"
version = "0.3.4"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
homepage = "https://github.com/apoelstra/strason/"
repository = "https://github.com/apoelstra/strason/"
documentation = "https://www.wpsoftware.net/rustdoc/strason/"
description = "Json parser that preserves field ordering and stores numbers as strings, preserving their full data"

[dependencies]
serde = "1.0"

[dev-dependencies]
serde_json = "1.0"

