[package]
name = "strason"
version = "0.5.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
homepage = "https://github.com/apoelstra/strason/"
repository = "https://github.com/apoelstra/strason/"
documentation = "https://www.wpsoftware.net/rustdoc/strason/"
description = "Archived and unmaintained."

