[package]
name = "strason-fuzz"
version = "0.0.1"
authors = ["copied from rust-bitcoin"]
publish = false

[package.metadata]
cargo-fuzz = true

[features]
honggfuzz_fuzz = ["honggfuzz"]

[dependencies]
honggfuzz = { version = "0.5", optional = true }
strason = { path = ".." }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"

[[bin]]
name = "roundtrip"
path = "fuzz_targets/roundtrip.rs"

[[bin]]
name = "unsafety"
path = "fuzz_targets/unsafety.rs"
